# ythonProject4

./: .flake8  .gitignore  README.md  pyproject.toml
data/: operations.xlsx
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_services.py  test_utils.py
